<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/titlebar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/forget_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textfield_edittext"
                android:ems="10"
                android:hint="@string/login_edit_phone_hint"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:textColorHint="@color/divider_line"
                android:textSize="14sp" />

            <Button
                android:id="@+id/forget_getsms"
                android:layout_width="101dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                style="@style/ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/forget_smscode"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:background="@drawable/textfield_edittext"
                android:ems="10"
                android:hint="@string/reg_sms_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="15dp"
                android:textColorHint="@color/divider_line"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/forget_password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/textfield_edittext"
            android:ems="10"
            android:hint="@string/login_edit_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/divider_line"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/forget_repassword"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/textfield_edittext"
            android:ems="10"
            android:hint="@string/rpwdhint"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingLeft="15dp"
            android:textColorHint="@color/divider_line" />

        <Button
            android:id="@+id/forget_button"
            android:layout_width="250dp"
            android:layout_height="30dp"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/common_bottom_button"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>