<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/titlebar" />

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black" />-->

        <EditText
            android:id="@+id/repass_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_shape_bg"
            android:hint="@string/input_pre_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/unselect_tishi"
            style="@style/SmallTitle" />

        <EditText
            android:id="@+id/repass_newtext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_shape_bg"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/unselect_tishi"
            style="@style/SmallTitle" />

        <EditText
            android:id="@+id/repass_retext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_shape_bg"
            android:hint="@string/input_new_password_again"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/unselect_tishi"
            style="@style/SmallTitle" />

        <Button
            android:id="@+id/repass_affirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dip"
            android:background="@drawable/button_red_content"
            android:text="@string/common_bottom_button"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>