<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <RelativeLayout
        android:id="@+id/commission_headlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/commission_moneyunpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="21dp"
                android:includeFontPadding="false"
                android:text="@string/unpay_money"
                android:textColor="#464646"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/commission_moneypayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/pay_money"
                android:textColor="#464646"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/commission_submit"
            style="@style/Big_Button"
            android:layout_width="82dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/commission_submit" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/commision_renzheng"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="为确保您的资金安全，提现请先" />

        <TextView
            android:id="@+id/commision_renzheng_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="认证"
            android:textColor="@color/common_red"
            android:textSize="12sp" />

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="身份" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/commission_buttonleft"
            style="@style/Common_Tab_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/income_record"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/commission_buttonright"
            style="@style/Common_Tab_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/out_record"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_my_wallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>