<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/titlebar" />


        <LinearLayout
            android:id="@+id/regist_linear_smscode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/regist_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/login_edit_phone_hint"
                    android:inputType="phone"
                    android:layout_gravity="bottom"
                    android:paddingLeft="14dp"
                    android:background="@drawable/textfield_edittext"
                    android:textSize="14sp"
                    android:textColorHint="@color/divider_line"/>

                <Button
                    android:id="@+id/regist_getsms"
                    style="@style/ButtonStyle"
                    android:layout_width="101dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/regist_smscode"
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:digits="1234567890"
                    android:hint="@string/reg_sms_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="14sp"
                    android:paddingLeft="14dp"
                    android:background="@drawable/textfield_edittext"
                    android:textColorHint="@color/divider_line" />
            </LinearLayout>

            <EditText
                android:id="@+id/regist_password"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_password"
                android:inputType="textPassword"
                android:paddingLeft="14dp"
                android:textSize="14sp"
                android:background="@drawable/textfield_edittext"
                android:textColorHint="@color/divider_line" />
            <EditText
                android:id="@+id/regist_invitecode"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_invite_code"
                android:digits="0123456789"
                android:inputType="number"
                android:paddingLeft="14dp"
                android:textSize="14sp"
                android:background="@drawable/textfield_edittext"
                android:textColorHint="#be1a20" />
            <Button
                android:id="@+id/regist_button"
                android:layout_width="250dp"
                android:layout_height="30dp"
                style="@style/ButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="@string/reg_btn"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
